RESOLVED FIXED93663
Crash exiting from HTML5 FS mode to normal mode via ESC key
https://bugs.webkit.org/show_bug.cgi?id=93663
Summary Crash exiting from HTML5 FS mode to normal mode via ESC key
Jer Noble
Reported 2012-08-09 15:45:51 PDT
Crash exiting from HTML5 FS mode to normal mode via ESC key
Attachments
Patch (2.01 KB, patch)
2012-08-09 15:50 PDT, Jer Noble
eric.carlson: review+
Jer Noble
Comment 1 2012-08-09 15:50:10 PDT
Jer Noble
Comment 2 2012-08-10 13:16:59 PDT
Darin Adler
Comment 3 2012-08-13 14:55:06 PDT
Comment on attachment 157568 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=157568&action=review > Source/WebKit2/UIProcess/mac/WKFullScreenWindowController.mm:-148 > - _watchdogTimer = adoptNS([NSTimer scheduledTimerWithTimeInterval:DefaultWatchdogTimerInterval target:self selector:@selector(exitFullScreen) userInfo:nil repeats:NO]); Or you could just take out the adoptNS and do a straight assignment. That would also work.
Jer Noble
Comment 4 2012-08-13 16:30:38 PDT
(In reply to comment #3) > (From update of attachment 157568 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=157568&action=review > > > Source/WebKit2/UIProcess/mac/WKFullScreenWindowController.mm:-148 > > - _watchdogTimer = adoptNS([NSTimer scheduledTimerWithTimeInterval:DefaultWatchdogTimerInterval target:self selector:@selector(exitFullScreen) userInfo:nil repeats:NO]); > > Or you could just take out the adoptNS and do a straight assignment. That would also work. I considered that, but I was simultaneously getting rid of the autorelease.
Note You need to log in before you can comment on or make changes to this bug.