Crash exiting from HTML5 FS mode to normal mode via ESC key https://bugs.webkit.org/show_bug.cgi?id=93663

Reviewed by Eric Carlson.

Crash is due to a refcount underrun with _watchdogTimer due to adopting an autoreleased NSTimer.
Use the non-autoreleased NSTimer creation method and manually add to the main NSRunLoop.

* UIProcess/mac/WKFullScreenWindowController.mm:
(-[WKFullScreenWindowController cancelOperation:]):

Canonical link: https://commits.webkit.org/111599@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125319 268f45cc-cd09-0410-ab3c-d52691b4dbfc